# rasterizePolygon

./: .gitignore  .gitignore~Stashed changes  CMakeLists.txt  README.md  main  main.cpp  tgaimage.cpp  tgaimage.h  tiny.cpp  tiny.h
